# whisper.cpp

godot-extension/: Cargo.toml  build.sh  whisper_cpp.gdextension
godot-extension/src/: lib.rs  whisper_node.rs
