[package]
name = "whisper_cpp_gdext"
version = "0.1.0"
edition = "2021"
description = "GDExtension bindings for whisper.cpp — exposes WhisperCpp node to Godot 4"

[lib]
crate-type = ["cdylib"]

[dependencies]
godot = { version = "0.4", features = ["experimental-threads"] }
whisper-rs = "0.16"
enigo = { version = "0.3", default-features = false, features = ["x11rb"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
